[tool.poetry]
name = "bot discord punya fabian gabut parah"
version = "0.1.1"
description = "jangan copas nyet"
authors = ["Fabian Habil <fabianhabilramdhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pymongo = "^3.12.1"
dnspython = "^2.1.0"
nextcord = "^2.0.0-alpha.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
