[tool.poetry]
name = "repl_python3_bot-discord-fabian-v-000001"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pymongo = "^3.12.1"
dnspython = "^2.1.0"
nextcord = "^2.0.0-alpha.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
